Make Bubble API common with modern blog

--- a/src/content/blog/testeo.mdx
+++ b/src/content/blog/testeo.mdx
@@ -18,11 +18,11 @@ export const components = { img: Picture }
 
 This is a test
 
-<YonicBubble position="bottom" alignment="far">
+<TextBubble theme="yonic" position="bottom" alignment="far">
 Test for **speech bubbles**!
 
 The triangle can be positioned using the **side** and **alignment** properties, and using offsets from the **near** and **far** positions.
-</YonicBubble>
+</TextBubble>
 <Chara name="yonic" position="right" set="summer" sprite="annoyed" thoughts="I've worked too hard on this..." />
 
 <Picture src={Test} alt="Test image">
