--- a/src/content/blog/test.mdx
+++ b/src/content/blog/test.mdx
@@ -17,11 +17,11 @@ export const components = { img: Picture }
 
 This is a test
 
-<BaseBubble>
+<TextBubble theme="yonic" position="bottom" alignment="far">
 Test for **speech bubbles**!
 
 The triangle can be positioned using the **side** and **alignment** properties, and using offsets from the **near** and **far** positions.
-</BaseBubble>
+</TextBubble>
 <Chara name="yonic" position="right" set="summer" sprite="thinking" thoughts="I've worked too hard on this..." />
 
 <Picture src={Test} alt="Test image">
