--- a/src/content/blog/testeo.mdx
+++ b/src/content/blog/testeo.mdx
@@ -6,11 +6,8 @@ pubDate: "2023-08-30T20:47:29.783Z"
 series:
     id: legacy
     order: 10
+tags: [test, hola, long-tag-word, mundo]
 ---
-
-import Chara from "@lib/components/Chara.astro"
-import Picture from "@lib/components/Picture.astro"
-
 import Test from "@assets/articles/test/test.jpeg"
 import TestUrl from "@assets/articles/test/test.jpeg?url"
 
