--- a/src/content/blog/testeo.mdx
+++ b/src/content/blog/testeo.mdx
@@ -1,6 +1,5 @@
 ---
 title: "Second article test for article test"
-draft: true
 category: gaming
 description: "Yeah no kids allowed"
 pubDate: "2023-08-30T20:47:29.783Z"
@@ -43,6 +42,9 @@ The triangle can be positioned using the **side** and **alignment** properties, 
 <Chara name="yonic" position="right" set="summer" sprite="annoyed" thoughts="I've worked too hard on this..." />
 
 <Picture src={Test} alt="Test image">
+    <>This is a *test* for an ***image*** that I've made with the HFK DSHF Space Telescope, I know it's not big but at least it's interesting</>
+</Picture>
+<Picture src={Test} alt="Test image" width="200">
     <>This is a *test* for an ***image*** that I've made with the HFK DSHF Space Telescope, I know it's not big but at least it's interesting</>
 </Picture>
 Take it with a grain of salt!
