Add blog posts from modern version and match missing components API

--- a/src/content/blog/testeo.mdx
+++ b/src/content/blog/testeo.mdx
@@ -3,6 +3,7 @@ title: "Second article test for article test"
 category: gaming
 description: "Yeah no kids allowed"
 pubDate: "2023-08-30T20:47:29.783Z"
+draft: true
 series:
     id: legacy
     order: 10
