--- a/src/content/blog/first-post.mdx
+++ b/src/content/blog/first-post.mdx
@@ -1,65 +1,85 @@
 ---
-title: "The first (legacy) post"
-description: "After much effort, I finished creating a version of my blog compatible with legacy browsers from the late 1990s. That’s nearly a 30 year gap!"
-pubDate: "October 2 2023"
+title: "The first post"
+description: "With this post, The Yonic Corner officially starts a new stage!"
+pubDate: "May 26 2023"
 category: blog
-series: 
-    id: legacy
-    order: 1
-tags: [yonic-corner, legacy, web-design]
+tags: [yonic-corner, web-design]
 ---
-
 import AlertBox from "@lib/components/AlertBox.astro"
+import VideoImage from "@assets/articles/first-post/video.png"
+import HugoVersion from "@assets/articles/first-post/hugo-version.png"
 
-<div class="feed-preview">
-    <p>{frontmatter.description}</p>
-</div>
-
-## Completely new design, but with not many changes
-
-The Legacy version makes a couple twists to the modern version of my blog, but the backend and content management API is pretty much identical to the modern version.
-
-This allows me to copy any post from the modern site to the Legacy site, while making little to no modifications to the articles themselves.
-
-Naturally, since my intention is to target older browsers, some of the modern technologies like video playback will not work, especially with how video playback is implemented in recent years without actually hosting your own and rely on Flash Player for that.
-
-<AlertBox title="Notice">
-<>Windows 9x style notice boxes like this will be used for under construction or unsupported content that the modern version does.</>
+<AlertBox title="This post was ported from the modern version.">
+<>The information on this post refers only to the [modern version](https://modern.yonic.blog/blog/article/first-post/) of this post.</>
 </AlertBox>
 
-Speaking of which, I still have yet to implement a music player using this plugin&mdash;it's time to unearth this zombie technology. Hopefully, I will be able to do it with ActionScript 2 and Flash Player 7 so that it can work on Mac OS Classic.
+<div class="feed-preview">
+The Yonic Corner is back! And this time, it's back with a new
+design, structure, and content. However, it still remains (mostly)
+true to its original version.
+</div>
 
-As for the design of the site itself, I wanted to give it a mix of late 1990s to early 2000s look, but I feel like I borrowed too many pages from the Microsoft style handbook.
+## What has changed?
 
-Maybe it's because of using too much Verdana. I might add web fonts in the future, but I am very satisfied with the look of this site as it is right now. I especially like the icons and pixelated look some UI elements have.
+Nothing much, really. **The core structure is very similar to**
+the old blog, but it has departed from the generic PaperMod design.
 
-## Why did you do this!?
+This new design I like to call **Vectarcade**, is heavily inspired
+on how the web used to look like in the late 90s to early 2000s,
+an era where CSS started to gain foothold and pixel graphics were
+the main trend.
 
-Barely anybody browses the web in old, outdated web browsers. And I highly doubt anyone with such an outdated equipment would be browsing my blog. So... Why did I waste a month of work doing this?
+Although for this design, I did not restrain myself from using modern CSS, 
+I'm working on a way to expand the compatibility to older browsers
+(Internet Explorer may be out of the question, however...), and instead of
+pixel graphics, I'm using low resolution vectorized versions with a similar style.
+
+One of the biggest changes apart from the design is the switch from **Hugo** to **Astro**.
+The main reason for the change was because I've been having a much more positive
+developer experience in Astro than Hugo, and also so I can do a little bit of CSR,
+which is somewhat tough to do in Hugo.
+
+At the end of the day, this should give you a very similar experience to the older version
+of the blog. And the philosophy of the blog remains the same:
+Striving to reduce as much bloat as possible. Astro helps a lot by
+striping away most of the JavaScript that other frameworks would throw in.
+So you can still browse this blog with **Noscript** or any other
+solution available to have JavaScript disabled, without any hiccups.
+
+<noscript>
+I mean, if you're seeing this paragraph is because you have JavaScript disabled.
+And you're still able to explore this blog perfectly. Hooray!
+</noscript>
+
+On that matter, I found a way to get rid of the YouTube player. Instead, now it's
+using an alternative that also works without JavaScript! No more ads, no more bloat!
+
+<Picture src={VideoImage} alt="Image of video player">
+    <>Here is an image of the Invidious video player that's used instead of the YouTube one
+    from the previous version.</>
+</Picture>
+
+## There's still work to do
+
+<Picture src={HugoVersion} alt="The Yonic Corner: Hugo version">
+    <>This is how The Yonic Corner used to look like in the Hugo version. Note the dark theme. </>
+</Picture>
+
+There are still a couple things that are missing from the former version:
+
+- The **music player** is not ready yet. I promise, I'll make it work without JavaScript, like before.
+But I don't discard the possibility of making a JavaScript one version to go along with the other.
+- I'm still debating on whether I'll add a **dark theme** or not.
+But if I decide on making one, I'd like to have a working **responsive** design first.
+- I'd like to reintroduce **RSS feeds** sometime.
+- **Multiple languages** like Spanish and Japanese aren't top in my priority list, but
+there's a chance I'll add them back sometime.
+
+There are also some new features I'd like to add to the site, 
+as well as a few things I need to polish like SEO and some accessibility features.
 
 <TextBubble position="bottom" alignment="far" theme="yonic">
-    Well, I... I don't know! I simply felt like doing it.
-
-    I *guess* you could say I wanted The Yonic Corner to have that distinguishing feature among other blogs?
+    And don't forget, I'm still here! The character system is still not
+    fleshed out, but it works at the very least!
 </TextBubble>
-<Chara name="yonic" set="summer" sprite="suspicious" thoughts="Note to self: I need to create my winter sprites!" />
-
-I also wanted to get a deeper understanding on the workings on pre-standards HTML and the quirks of old browsers, as well as the history that would bring the early 2000s to web technologies. But apart from that, I took it as an interesting challenge to refine my frontend skills.
-
-This design has many things that define the web during this period: Marquees, table layouts, animated GIFs, repeated backgrounds, and using images to define complex and decorated UI elements. **A truly nostalgic experience**.
-
-## Will I even go deeper?
-
-Probably not. I'm quite satisfied with how broad the support of operating systems is.
-
-- **Windows**: it technically supports even **Windows 3.x** thanks to being designed to work for IE5 in mind, but I haven't tested it out. Windows 9x and NT 4 work like a charm.
-- **Mac OS Classic**: I tested it out with several browsers while on **System 9**, but I think you should be able to have it working down to **System 8.6** as well.
-- **UNIX**: I guess it could work with Internet Explorer for UNIX, but I'm not willing to test this out.
-
-## The HTTPS problem
-
-None of the browsers I've targeted this blog to **won't work under the latest versions of encryption protocols** used by nearly all websites since a few years ago (TLS 1.1 and higher). This has forced me to host the blog in a place where HTTPS is not forced, which meant that many web hosting solutions I'm used like Netlify got benched.
-
-The only reasonable place to do it for now without setting up a server on my own is **GitHub Pages**. I don't really mind having a fully static blog, but having SSR might be used to leverage the rendering of certain dynamic elements, like the site marquee.
-
-Right now, I'm using the default domain, so I can't turn off HTTPS for now. This is definitely bound to change soon so that it removes this final obstacle.
+    <Chara name="yonic" set="summer" sprite="normal" thoughts="I've came back into existence!" />
