Add time to read article

--- a/src/content/blog/eurovision-2023-after-show.mdx
+++ b/src/content/blog/eurovision-2023-after-show.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Eurovision 2023: One month after the show"
+title: "Eurovision 2023: One month later"
 description: The year of the "Uk"s, hopes thrown out to the garbage, cha chas stucked to your head like a tattoo, and the "totally called it" moments.
 pubDate: 2023-06-09T15:53:42.685Z
 category: misc
@@ -45,7 +45,7 @@ But the real icing of the cake weren't the actual performances, but rather,
 the **interval acts** between them. Especially the one in the second semifinal,
 which was an amazing trip of emotions.
 
-<Youtube instance="https://y.com.sb" id="2bGOf_MOeOU" title="Be who you wanna be" description="The interval act of the second semifinal, probably one of the most notable performances in recent Eurovision history."/>
+<Youtube instance="https://y.com.sb" duration="5:49" id="2bGOf_MOeOU" title="Be who you wanna be" description="The interval act of the second semifinal, probably one of the most notable performances in recent Eurovision history."/>
 
 ## The performances of the grand final
 
@@ -54,7 +54,7 @@ of the most notable ones for me in running order, and do a quick round of the re
 
 ### Austria (running 1st, placing 15th)
 
-<Youtube instance="https://y.com.sb" id="8uk64V9h0Ko" title="Who the hell is Edgar?" />
+<Youtube instance="https://y.com.sb" duration="3:05" id="8uk64V9h0Ko" title="Who the hell is Edgar?" />
 
 <TextBubble position="bottom" alignment="far" theme="yonic">
     The running order really ruined the placing of this song, it was a clear crowd favorite.
@@ -74,7 +74,7 @@ What the hell happened? If anything, the opposite should've happened.
 
 ### Portugal (running 2nd, placing 23rd)
 
-<Youtube instance="https://y.com.sb" id="HYfkxX4PFyw" title="Ai coração" />
+<Youtube instance="https://y.com.sb" duration="3:23" id="HYfkxX4PFyw" title="Ai coração" />
 
 <TextBubble position="bottom" alignment="far" theme="yonic">
     Man, this is why I love Eurovision. You get to hear completely new genres and get hooked into them.
@@ -92,7 +92,7 @@ Either way, Mimicat's song has consistently skimmed my Top 5 since I first heard
 
 ### Poland (running 4th, placing 19th)
 
-<Youtube instance="https://y.com.sb" id="SEgF1aP-U1o" title="Bejba" description="It's kinda krejsa" />
+<Youtube instance="https://y.com.sb" duration="3:29" id="SEgF1aP-U1o" title="Bejba" description="It's kinda krejsa" />
 
 <TextBubble position="bottom" alignment="far" theme="yonic">
     Let's be real: Blanka is a [Lena Meyer-Landrut](https://www.youtube.com/watch?v=7pL9vdpSvnY) who has [travelled
@@ -111,7 +111,7 @@ not even the dance break could've saved her.
 
 ### France (running 6th, placing 16th)
 
-<Youtube instance="https://y.com.sb" id="fOtQJ4o-HoA" title="Évidemment" />
+<Youtube instance="https://y.com.sb" duration="3:31" id="fOtQJ4o-HoA" title="Évidemment" />
 
 <TextBubble position="bottom" alignment="far" theme="yonic">
     I didn't expect her to flop this bad!
@@ -128,7 +128,7 @@ an unanimous opinion from my family and several others.
 
 ### Spain (running 8th, placing 17th)
 
-<Youtube instance="https://y.com.sb" id="Vw6qPWhjevk" title="Eaea" />
+<Youtube instance="https://y.com.sb" duration="3:25" id="Vw6qPWhjevk" title="Eaea" />
 
 <TextBubble position="bottom" alignment="far" theme="yonic">
     To many Spaniards, her flop was a big surprise. But me?
@@ -153,7 +153,7 @@ In hindsight, [Vicco and her Nochentera](https://www.youtube.com/watch?v=uwvIHih
 
 ### Sweden (running 9th, placing 1st)
 
-<Youtube instance="https://y.com.sb" id="BE2Fj0W4jP4" title="Tattoo" description="The one that won" />
+<Youtube instance="https://y.com.sb" duration="3:29" id="BE2Fj0W4jP4" title="Tattoo" description="The one that won" />
 
 <TextBubble position="bottom" alignment="far" theme="yonic">
     Congratulations, Sweden. You've created not an Eurovision icon,
@@ -170,7 +170,7 @@ between Sweden and the big elephant in the room.
 
 ### Estonia (running 12th, placing 8th)
 
-<Youtube instance="https://y.com.sb" id="HsbC-OYMA3s" title="Bridges" />
+<Youtube instance="https://y.com.sb" duration="3:32" id="HsbC-OYMA3s" title="Bridges" />
 
 <TextBubble position="bottom" alignment="far" theme="yonic">
     Her secret: The phantom piano. (Sarcasm)
@@ -184,7 +184,7 @@ It was either her or Armenia.
 
 ### Finland (running 13th, placing 2nd)
 
-<Youtube instance="https://y.com.sb" id="l6rS8Dv5g-8" title="Cha Cha Cha" />
+<Youtube instance="https://y.com.sb" duration="3:21" id="l6rS8Dv5g-8" title="Cha Cha Cha" />
 <TextBubble position="bottom" alignment="far" theme="yonic">
     Ugh... Try as I might, I can't stand hearing this.
     
@@ -211,7 +211,7 @@ to a only televoting system.
 
 ### Belgium (running 16th, placing 7th)
 
-<Youtube instance="https://y.com.sb" id="U1xD14IMKtg" title="Because of You" />
+<Youtube instance="https://y.com.sb" duration="3:29" id="U1xD14IMKtg" title="Because of You" />
 <TextBubble position="bottom" alignment="far" theme="yonic">
     I still don't get how he was able to perform so well.
 </TextBubble>
@@ -231,7 +231,7 @@ another English-speaking country I could mention.
 
 ### Armenia (running 17th, placing 14th)
 
-<Youtube instance="https://y.com.sb" id="h0q7AkYk2hY" title="Future Lover" />
+<Youtube instance="https://y.com.sb" duration="3:31" id="h0q7AkYk2hY" title="Future Lover" />
 <TextBubble position="bottom" alignment="far" theme="yonic">
     She did commendably well, but I don't know about that dance break part...
 </TextBubble>
@@ -250,7 +250,7 @@ Now go to a near café and drink a smoothie.
 
 ### Israel (running 23rd, placing 3rd)
 
-<Youtube instance="https://y.com.sb" id="Z3mIcCllJXY" title="Unicorn" />
+<Youtube instance="https://y.com.sb" duration="3:24" id="Z3mIcCllJXY" title="Unicorn" />
 <TextBubble position="bottom" alignment="far" theme="yonic">
     Musically speaking, Unicorn puts every other contestant to shame.
     (Well, except for one which I'll get to after Israel.)
@@ -272,7 +272,7 @@ Enjoy those sweet douze points.
 
 ### Croatia (running 25th, placing 13th)
 
-<Youtube instance="https://y.com.sb" id="hGuGfdEJ5Pw" title="Mama ŠČ" />
+<Youtube instance="https://y.com.sb" duration="3:03" id="hGuGfdEJ5Pw" title="Mama ŠČ" />
 <TextBubble position="bottom" alignment="far" theme="yonic">
     Croatia, you've got balls sending a song like this.
     Man, this is why I love Eurovision: You can't avoid these out of the ordinary
@@ -318,7 +318,7 @@ Now, onto the completely random awards of things and moments that I found worth 
 This award goes to RAI, for failing to join the Eurovision broadcast in time.
 With this, it only adds more points to my "Italians being incompetent" prejudice.
 
-<Youtube instance="https://y.com.sb" id="-b3cCWsHsZU" title="How TV stations join together for Eurovision" description="Rai 1 didn't make it to the beginning of ESC broadcast." />
+<Youtube instance="https://y.com.sb" duration="2:27" id="-b3cCWsHsZU" title="How TV stations join together for Eurovision" description="Rai 1 didn't make it to the beginning of ESC broadcast." />
 
 <TextBubble position="bottom" alignment="far" theme="yonic">
     To be fair, having to synchronize over 40 different feeds across the continent
@@ -332,7 +332,7 @@ Awarded to La Zarra, for catching all our attentions with this gesture after get
 and promptly leave before Loreen is crowned winner. Bad sportswomanship or a total badass moment, I leave that
 to your interpretation.
 
-<Youtube instance="https://y.com.sb" id="6UxPnzYJcqI" title="The finger of honour" description="And then she leaves." />
+<Youtube instance="https://y.com.sb" duration="0:22" id="6UxPnzYJcqI" title="The finger of honour" description="And then she leaves." />
 
 To me, she was just messing around with everyone. Props to her for doing it.
 
@@ -341,7 +341,7 @@ To me, she was just messing around with everyone. Props to her for doing it.
 This year has had one of the most visually impressive and emotional postcards, so I award this year the Best Postcards Award.
 Showing common places in UK, Ukraine, and the participating countries.
 
-<Youtube instance="https://y.com.sb" id="mpAhfmrBxXc" title="The postcards" />
+<Youtube instance="https://y.com.sb" duration="32:03" id="mpAhfmrBxXc" title="The postcards" />
 
 
 
@@ -384,4 +384,4 @@ it's a direct disqualification for the award.
 * If the war progresses to new levels, another Ukranian victory.
 * And most importantly, *her*:
 
-<Youtube instance="https://y.com.sb" id="bJ7nO8obRog" title="Lynda Woodruff" description="Please, come back. We love you." />
+<Youtube instance="https://y.com.sb" duration="2:17" id="bJ7nO8obRog" title="Lynda Woodruff" description="Please, come back. We love you." />
