Update about page

--- a/src/pages/about.mdx
+++ b/src/pages/about.mdx
@@ -20,6 +20,8 @@ way through the site, so I made multiple ways of surfing my site:
 * **Series:** Think of it as a blog version of a music or video playlist:
 An ordered list of articles talking about the same topic, split into
 multiple parts.
+* **Archive:** All of my posts ordered from the date they were first published,
+including those from my previous iteration of the blog.
 
 The design of the **Legacy Version** is similar to that from the modern version of my blog,
 but stays more true to the late 1990s design, which I like to call Pixarcade.
@@ -51,5 +53,3 @@ which goes to show how fond I am of this character.
     Maybe it's a nostalgia thing, but I think I like this design of the Legacy blog more than the modern one.
 </TextBubble>
 <Chara name="yonic" set="summer" sprite="thinking" thoughts="Yonic is happy to see you!" />
-
-Right now you'll only see Yonic wandering about, but very likely you'll see more in the future.
